# Act

./: .editorconfig  .env.example  .gitattributes  .gitignore  CLAUDE.md  LICENSE  MANIFEST.sha256  Makefile  README.md  SECURITY.md  docker-compose.yml
.claude/skills/add-bounded-context/: SKILL.md
.claude/skills/add-translation/: SKILL.md
.claude/skills/auth-flow/: SKILL.md
.claude/skills/create-migration/: SKILL.md
.claude/skills/deploy-check/: SKILL.md
.claude/skills/guest-rsvp-merge/: SKILL.md
.claude/skills/outbox-event/: SKILL.md
.claude/skills/recurrence-rrule/: SKILL.md
.claude/skills/write-adr/: SKILL.md
.claude/skills/write-rls-policy/: SKILL.md
.github/workflows/: ci.yml
backend/: .importlinter  Dockerfile.dev  README.md  manage.py  pyproject.toml
backend/act/: __init__.py  asgi.py  urls.py  wsgi.py
backend/act/settings/: __init__.py  base.py  dev.py  prod.py  test.py
backend/apps/contacts_sharing/: CLAUDE.md
backend/apps/core/: README.md  apps.py  models.py  views.py
backend/apps/core/crypto/: __init__.py  fields.py  keys.py
backend/apps/core/middleware/: __init__.py  csp.py
backend/apps/core/outbox/: __init__.py  models.py  services.py
backend/apps/core/rls/: __init__.py  middleware.py
backend/apps/core/tests/: test_crypto.py
backend/apps/events/: CLAUDE.md  admin.py  apps.py  contracts.py  models.py  services.py
backend/apps/identity_auth/: CLAUDE.md  admin.py  apps.py  contracts.py  models.py  services.py
backend/apps/localization/: CLAUDE.md
backend/apps/recommendations/: CLAUDE.md
backend/apps/rsvp/: CLAUDE.md  admin.py  apps.py  contracts.py  models.py  services.py
backend/tests/: __init__.py  conftest.py  test_smoke.py
design/: README.md
docs/: AI-WORKFLOW.md  ARCHITECTURE.md  CHANGELOG.md  PRODUCT.md  erd.md  glossary.md  jtbd-bc-mapping.md  risk-register.md
docs/api/: openapi.yaml
docs/decisions/: adr-014-cryptography-replacement-memo.md
docs/design/: principles.md
docs/iterations/: README.md  iteration-4.5-audit-report.md  iteration-5-applied.md  iteration-5.5-roadmap.md  iteration-6-applied.md  iteration-7-applied.md  iteration-8-applied.md
docs/pilot/: day-template.md
docs/research/: phase-1-prep-findings-2026-05-28.md
docs/runbooks/: db-restore.md  deploy.md  rollback.md
frontend/: README.md
frontend/messages/: en.json  ru.json
infra/postgres/: init.sql
prompts/: README.md  iteration-0-bootstrap.md  iteration-4.5-audit.md  iteration-5-corrections.md  phase-1.4-django-skeleton.md  research-phase-1-prep.md
