[project]
name = "act"
version = "0.1.0"
description = "Host-first платформа для поиска компании на совместные мероприятия (modular monolith)."
requires-python = ">=3.12"
license = { text = "Proprietary" }
authors = [{ name = "Andrey" }]

dependencies = [
    # Backend core [F: CLAUDE.md строки 49, 51]
    "django==5.2.*",                          # ADR-002 (Django 5.2 LTS)
    "psycopg[binary]>=3.2",                   # PG 17 client; binary wheel избегает компиляции
    # Auth (NON-NEGOTIABLE: no Clerk / Auth0 / Supabase) [F: CLAUDE.md строка 58]
    "django-allauth>=65.0",                   # Native Telegram provider [F: docs/research/phase-1-prep-findings-2026-05-28.md R2]
    "django-otp>=1.7,<2",                     # MFA для Pro; 1.6.0 explicitly добавил Django 5.2 [R7]
    "django-otp-webauthn>=0.8,<1",            # Passkeys; 0.8 classifiers Django 5.2 + 6.0 [R7]
    # PII encryption (NON-NEGOTIABLE #7 + ADR-014 revised 2026-05-28).
    # Replacement of stale `django-cryptography-django5` (R6) — теперь PyCA `cryptography`
    # напрямую + custom EncryptedField в apps.core.crypto (~80 LOC). Подробности — ADR-014
    # «Decision (revised)» в docs/ARCHITECTURE.md.
    "cryptography>=43.0",
    # Background jobs (NEVER Celery/Redis) [F: CLAUDE.md строка 53]
    # Pin upper bound <4 — Django 5.2 LTS НЕ в official CI matrix; locally validate
    # перед production [R4]. PgBouncer txn-pool incompat → worker direct PG connection.
    "procrastinate[django]>=3.8,<4",          # Postgres-backed jobs (ADR-006)
    # API + frontend integration
    "drf-spectacular>=0.27",                  # OpenAPI generation для Next.js typegen
    "django-cors-headers>=4.5",
    # Monitoring [F: CLAUDE.md строка 66]
    "sentry-sdk[django]>=2.18",               # self-host или GlitchTip
    # Module boundary (NON-NEGOTIABLE #11 + ADR-001) [F: CLAUDE.md строка 68]
    "import-linter>=2.1",                     # Python-эквивалент Shopify Packwerk
]

# PEP 735 dependency groups (uv >= 0.5 рекомендует) — replaces deprecated
# [tool.uv].dev-dependencies (warning в CI).
# Установка: `uv pip install --group dev` либо явный список в CI step.
[dependency-groups]
dev = [
    # Test stack [F: CLAUDE.md строка 69]
    "pytest>=8.3",
    "pytest-django>=4.9",
    "pytest-cov>=5.0",
    "pytest-xdist>=3.6",                      # параллельный запуск тестов
    "factory-boy>=3.3",                       # test data
    "django-silk>=5.2",                       # N+1 detection (Pilot Risk check #2)
    # Linting / formatting
    "ruff>=0.7",                              # заменяет flake8, isort, pyupgrade
    "mypy>=1.13",
    "django-stubs[compatible-mypy]>=5.1",
    # Pre-commit
    "pre-commit>=4.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
# DJ — django-specific rules через flake8-django [F: pydevtools.com/ruff-for-django]
extend-select = [
    "E", "F", "W",      # pycodestyle + pyflakes
    "I",                # isort
    "UP",               # pyupgrade
    "B",                # bugbear
    "S",                # bandit (security)
    "DJ",               # flake8-django (7 правил)
    "C90",              # mccabe complexity
    "N",                # pep8-naming
    "ANN",              # flake8-annotations
    "RUF",              # ruff-specific
]
ignore = [
    "S101",             # assert (used in tests)
    # Project is intentionally written in Russian (docs/comments/docstrings).
    # Cyrillic vs Latin ambiguity warnings — false positives by design.
    "RUF001",           # ambiguous-unicode-character-string
    "RUF002",           # ambiguous-unicode-character-docstring
    "RUF003",           # ambiguous-unicode-character-comment
]

[tool.ruff.lint.per-file-ignores]
"**/migrations/*.py" = ["E501", "RUF012", "N806"]    # generated code
"**/tests/*.py" = ["S101", "ANN", "S106"]            # asserts + hardcoded passwords OK in tests
"**/conftest.py" = ["ANN", "S101"]
"**/settings/*.py" = ["E501", "F403", "F405"]        # wildcard imports OK
# Models: Django Meta indexes/constraints — list-as-class-attr — стандартный pattern,
# не bug. DJ008 (missing __str__) — skeleton Phase 1.4; добавляется per BC в W1+.
"**/models.py" = ["RUF012", "DJ008"]
# Apps config: AppConfig.default_auto_field — class attribute list/string OK.
"**/apps.py" = ["RUF012"]
# Django field API (get_db_prep_save, from_db_value) принимает Any — это framework contract.
"**/crypto/fields.py" = ["ANN401"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["mypy_django_plugin.main"]
exclude = ["migrations/", "build/"]

[[tool.mypy.overrides]]
module = ["procrastinate.*", "factory.*"]
ignore_missing_imports = true

[tool.django-stubs]
django_settings_module = "act.settings.dev"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "act.settings.test"
python_files = ["test_*.py", "*_test.py", "tests.py"]
testpaths = ["tests", "apps"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=apps",
    "--cov-report=term-missing",
    "--cov-fail-under=70",                    # Phase 1 target; повысить до 80 в W5-W10
]
markers = [
    "rls: tests that verify RLS isolation (FORCE + RESTRICTIVE default_deny)",
    "outbox: tests for transactional outbox patterns (ADR-016)",
    "compliance: tests for 152-ФЗ requirements (ст. 9, ст. 12, ст. 18)",
    "slow: tests >1s (run with --runslow)",
]

[tool.coverage.run]
source = ["apps"]
omit = [
    "*/migrations/*",
    "*/tests/*",
    "*/conftest.py",
    "*/settings/*",
    "*/manage.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
